Revision history for CPAN-Upload-Tiny

{{$NEXT}}
          - Add missing documentation for new_from_config_or_stdin

0.009     2018-12-16 16:31:13+01:00 Europe/Amsterdam
          - Add fallback to ask for credentials on command line

0.008     2018-05-02 20:28:36+02:00 Europe/Amsterdam
          - Add ?ACTION=add_uri to PAUSE upload URI

0.007     2018-04-23 13:12:48+02:00 Europe/Amsterdam
          - Fix typo in dist.ini

0.006     2018-04-23 11:55:10+02:00 Europe/Amsterdam
          - Re-add ExecDir to the dzil configuration

0.005     2018-04-19 16:58:28+02:00 Europe/Amsterdam
          - Support reserved characters in credentials
          - Improve error messages for internal errors

0.004     2017-05-14 12:30:44+02:00 Europe/Paris
          - Fix user attribute name

0.003     2017-04-10 00:44:36+02:00 Europe/Amsterdam
          - Ignore entries other than the username or password
          - Give feedback on success

0.002     2017-03-31 15:44:53+02:00 Europe/Amsterdam
          Added a cpan-upload-tiny script

0.001     2017-03-30 21:24:02+02:00 Europe/Amsterdam
          Initial release to an unsuspecting world